# EEL7121_20242

aula1/: main.py
modulacao_am/a/timer_lowlevel/: CMakeLists.txt  timer_lowlevel.c
modulacao_am/picow_ble_temp_reader/: CMakeLists.txt  server.c
modulacao_am/test_dma/: CMakeLists.txt  spp_counter.c  timer_lowlevel.c
modulacao_am/timer_lowlevel/: CMakeLists.txt  spp_counter.c  spp_counter.h  timer_lowlevel.c
trabalho1_temperature_sensor/: relatorio.docx  temp_array.py  temp_array_v2.py  ~$latorio.docx  ~WRL2795.tmp
trabalho2_temperature_sensor_withoutADC/: caracteriz_GPIO.txt  measure.py  test_basic.py
trabalho2_temperature_sensor_withoutADC/read_without_adc/: CMakeLists.txt
trabalho2_temperature_sensor_withoutADC/visualstudio/hello_48MHz/: CMakeLists.txt
trabalho2_temperature_sensor_withoutADC/visualstudio/timer_lowlevel/: CMakeLists.txt  timer_lowlevel.c
